added modifications for GTGR to replace tech

--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -139,7 +139,7 @@ Great-tailed grackles are flexible [@logan2016flexibilityproblem; @logan2019flex
 
 &nbsp;
 
-<img width="100%" src="mi1Figgtgr.png">
+<img width="100%" src="mi1Figgtgr_2024.png">
 
 **Figure 3.** The reversal learning experiment in a group context (Design 2) tailored to the great-tailed grackle research question.
 
@@ -638,7 +638,7 @@ cohen.kappa(data[,c(3,5)], w=NULL,n.obs=NULL,alpha=.05,levels=NULL)
 
 ## **DESIGN 2** - Reversal learning experiment in a group context
 
-Feeders are set up in the field, counterbalanced for color/location/etc, and will be available for opening when the experiment is being conducted (Figure 7). The feeders will be fitted with technology to automatically record which individual visits which feeder and when (unless a particular population is easy to track visually without such automated technology). Individuals are habituated to the open feeders filled with food until at least half of the minimum sample size has visited at least 1 feeder. All individuals start on the same rewarded option for the initial discrimination to improve motivation for participating in the experiment (e.g., if the first rewarded option was counterbalanced across individuals, subjects might be slower to learn their rewarded option if they use social information about which option is rewarded). If the subject visits the rewarded feeder, the feeder will automatically deliver a small amount of food, and then close and reset more food in preparation for the next opening. If the subject visits the non-rewarded feeder, the presence data will be recorded, but the feeder will not open. All feeders will contain one type of high value food. Ideally, feeders will be programmed to automatically switch which feeder type is rewarded as soon as an individual passes criterion in the middle of a test session. If automation is not possible, then the data sheets will be checked at the end of each test session to determine which individuals have passed criterion and their rewarded feeder type will be changed in the next test session.
+Feeders are set up in the field, counterbalanced for color/location/etc, and will be available for opening when the experiment is being conducted (Figure 7). The feeders will be fitted with technology to automatically record which individual visits which feeder and when (unless a particular population is easy to track visually without such automated technology). Individuals are habituated to the open feeders filled with food until at least half of the minimum sample size has visited at least 1 feeder. All individuals start on the same rewarded option for the initial discrimination to improve motivation for participating in the experiment (e.g., if the first rewarded option was counterbalanced across individuals, subjects might be slower to learn their rewarded option if they use social information about which option is rewarded). If the subject visits the rewarded feeder, the feeder will automatically, or via a remote controlled by the experimenter, deliver a small amount of food, and then close and reset more food in preparation for the next opening. If the subject visits the non-rewarded feeder, the presence data will be recorded, but the feeder will not open. All feeders will contain one type of high value food. Ideally, feeders will be programmed to automatically switch which feeder type is rewarded as soon as an individual passes criterion in the middle of a test session. If automation is not possible, then the data sheets will be coded live by the experimenter and if that is not feasible, then the data sheet will be generated after each test session or at the end of the day by coding the videos to determine which individuals have passed criterion, and their rewarded feeder type will be changed in the next test session.
 
 Individuals in the control condition (if there is one), will receive 1 reversal and, after they pass criterion on reversal 1, feeders of both options (previously rewarded and previously non-rewarded options) will open for these individuals. This will help keep the whole group interested in visiting the feeders while the individuals in the manipulated group complete their serial reversals. Data are collected on success measures (see below) either before and after the flexibility intervention or only after the intervention (depending on feasibility and how the study design needs to be tailored for each population).
 
@@ -681,11 +681,11 @@ During follows, we will record each microhabitat the individual is present in an
 
 Additionally, for all observational methods we use binoculars so that we can always attempt to stay far enough from the focal individual that our presence is not affecting their behavior. Because that distance can be different for each individual and species, we hesitate to give a specific number. However, if at any point the focal individual shows it is affected by our presence by looking directly at the researcher, alarm calling or startling, then we end the focal immediately, drop all data from that follow and attempt the follow again the next day.
 
-We will attempt to balance follows for each observational method in the morning and afternoon for all individuals in the study. In this way, we will collect a random sample of data from active and inactive time periods for all individuals. Additionally, we will use automated tracking technology on most of the species, which records daily movement patterns. This will tell us whether there is temporal or spatial variation in bird behavior.
+We will attempt to balance follows for each observational method in the morning and afternoon for all individuals in the study. In this way, we will collect a random sample of data from active and inactive time periods for all individuals. Additionally, when automated tracking technology is used, it will record daily movement patterns, which will identify whether there is temporal or spatial variation in bird behavior.
 
 #### Focal follows
 
-We will collect data on foraging and microhabitat use of grackles during 10 minute focal follows and our minimum sample size will be 20 individuals. We will do 4 focal follows per individual before the flexibility manipulation and 4 focal follows per individual after the manipulation (8 total 10-min follows for 80 minutes of follow per bird). To minimize the temporal and spatial autocorrelation of behavior, we believe it is better to do the shorter follows of 10 minutes and space sequential follows apart by at least 1 week. 
+We will collect data on foraging and microhabitat use of grackles during 10 minute (if using tracking technology in conjunction) or long (if tracking technology is not available) focal follows and our minimum sample size will be 20 individuals. If using the 10 minute focal folows, we will do 4 focal follows per individual before the flexibility manipulation and 4 focal follows per individual after the manipulation (8 total 10-min follows for 80 minutes of follow per bird). If conducting long focal follows, follow the focal for as long as possible (this might require multiple long focal follows across multiple days) until it has exhibited the number of behaviors needed (this depends on the specific criteria involved in the research question). In the interest of minimizing the temporal and spatial autocorrelation of behavior, the focal follow duration and minimum time between focal follows will vary according to the species, the local pattern of persistence of food sources in the environment, and how quickly the species consumes food piles. For example, a study on dolphins (*Tursiops* cf. *aduncus*) found that focal follow data that was separated by 10.5 min was functionally independent [@karniski2015comparison]. Therefore, we suggest adjusting the focal follow duration and spacing to accommodate the species under study.
 
 #### All occurrences sampling
 
@@ -702,23 +702,23 @@ The data will be published in the Knowledge Network for Biocomplexity's data rep
 
 ### Planned sample
 
-We will catch at least 20 grackles using walk in traps, mist nets, and bow nets; collect their biometric data, blood, and feathers; apply colored leg bands for individual identification, one band will have a PIT tag that will interface with the automated feeders; attach a radio tag using a leg loop harness; and release them at their point of capture. We will collect data on pre- and post-manipulation success measures and conduct the experiment within the non-breeding season to control for potential temporal differences in the environment and behavior.
+We will catch at least 20 grackles using walk in traps, mist nets, and bow nets; collect their biometric data, blood, and feathers; apply colored leg bands for individual identification, one band will have a PIT tag that will interface with the automated feeders (if automated feeders are used); attach a radio tag using a leg loop harness (if tracking gear is used); and release them at their point of capture. We will collect data on pre- and post-manipulation success measures and conduct the experiment within the non-breeding season to control for potential temporal differences in the environment and behavior.
 
 ### Before and after manipulation success measures
 
-The proportion of time spent at dumpsters and outdoor cafes when food is present will be collected using automation from Cellular Tracking Technologies. Individuals will wear radio tags whose signals are detected (within approximately 75m) by nodes that are placed at approximately 200m intervals. Before and after tracking data will be collected on a minimum of 20 individuals with a minimum of 4 separate visit events per individual pre-manipulation and a minimum of 4 separate visit events per individual post-manipulation. This data will allow us to detect pre- vs post-manipulation within-individual differences in visits to dumpsters and cafes to determine whether individuals change the proportion of time they spend at these locations when food is present. 
+The proportion of time spent at dumpsters and outdoor cafes when food is present will be collected using one or both of two methods: 1) automation from Cellular Tracking Technologies, and/or 2) long focal follows [@altmann1974observational]. For method 1, individuals will wear radio tags whose signals are detected (within approximately 75m) by nodes that are placed at approximately 200m intervals. For method 2, focal individuals will be followed for as long as possible until criterion is reached (see later in this paragraph). Reaching criterion may require conducting multiple focal follows on multiple days. Focal follows will be spaced apart by at least one day because grackles either have food sources that persist across the whole season (e.g., oranges in an orange grove) or for a few hours (e.g., french fries in a parking lot) (Logan, pers. obs.). Therefore, the foraging observations on temporary (on the order of a few hours) food sources should be independent. Before and after tracking/long focal follow data will be collected on a minimum of 20 individuals with a minimum of 4 separate visit events per individual pre-manipulation and a minimum of 4 separate visit events per individual post-manipulation. This data will allow us to detect pre- vs post-manipulation within-individual differences in visits to dumpsters and cafes to determine whether individuals change the proportion of time they spend at these locations when food is present. 
 
-A determination will be made daily about whether food was present at a location and in which particular time period. We will visit the dumpsters each morning to record whether the lids were open and there was garbage inside or garbage on the ground around the dumpsters (1=food present) or whether the lids were closed and there was no garbage on the ground (0=food absent). We will initially visit cafes during lunch hours to determine when people generally eat outside and then set the default food presence period for each cafe to the widest time period we observed for that cafe (e.g., 12-2p = food present, before 12p and after 2p = food absent).
+For method 1, a determination will be made daily about whether food was present at a location and in which particular time period. We will visit the dumpsters each morning to record whether the lids were open and there was garbage inside or garbage on the ground around the dumpsters (1=food present) or whether the lids were closed and there was no garbage on the ground (0=food absent). We will initially visit cafes during lunch hours to determine when people generally eat outside and then set the default food presence period for each cafe to the widest time period we observed for that cafe (e.g., 12-2p = food present, before 12p and after 2p = food absent). For method 2, food presence/absence data is built in because the observer collects foraging, habitat, and location data at the same time.
 
-We will track baseline behavior and changes after the flexibility manipulation in habitat use and foraging using 10 minute focal follows [@altmann1974observational]. We document all occurrences of microhabitats used and foraging of the focal individual (see Observational methods, above). These data will allow us to detect any pre- and post-manipulation within-individual differences in diversity of habitat use and foraging breadth.
+We will track baseline behavior and changes after the flexibility manipulation in habitat use and foraging using the same long focal follows as above. We document all occurrences of microhabitats used and foraging of the focal individual (see Observational methods, above). These data will allow us to detect any pre- and post-manipulation within-individual differences in diversity of habitat use and foraging breadth.
 
 ### Flexibility manipulation (Design 2 reversal learning)
 
-We will set up 4 feeders (2 dark gray and 2 light gray) at one location in a particular spatial arrangement: one dark gray and one light gray feeder will be oriented in the same way 1-2m apart, and the other dark gray and light gray feeders will be facing them in a mirrored position, but 5-10m away. The feeders will be available for opening for 3 hours per day, 5 days per week. The feeders will be fitted with RFID readers to automatically record which individual (fitted with a PIT tag attached to a leg band) visits which feeder and when. If the subject visits the feeder that has the rewarded color, the feeder will automatically deliver a small amount of food, and then close and reset more food in preparation for the next opening. If the subject visits the feeder that has the non-rewarded color, the presence data will be recorded, but the feeder will not open. All feeders will contain one type of high value food (e.g., goldfish crackers, cheetos, cheez-its, or peanuts).
+When using automated feeders, we will set up 4 feeders (2 dark gray and 2 light gray) at one location in a particular spatial arrangement: one dark gray and one light gray feeder will be oriented in the same way 1-2m apart, and the other dark gray and light gray feeders will be facing them in a mirrored position, but 5-10m away. The feeders will be fitted with RFID readers to automatically record which individual (fitted with a PIT tag attached to a leg band) visits which feeder and when. When using remote controlled feeders, 2 feeders (1 dark gray and 1 light gray) will be set up at a location and we will attempt to minimize side bias by alternating which color is on which side each day as well as moving the feeders around so they are never in the exact location they were on a previous day. The feeders will be available for opening for throughout the day: we will find birds that need training, set up and run a training session, then move and repeat), 5 days per week. If the subject visits the feeder that has the rewarded color, the feeder will automatically, or via a remote control, deliver a small amount of food, and then close and reset more food in preparation for the next opening. If the subject visits the feeder that has the non-rewarded color, the presence data will be recorded, but the feeder will not open. All feeders will contain one type of high value food (e.g., goldfish crackers, cheetos, cheez-its, or peanuts).
 
 **Feeder habituation:** All feeders will have food available and be open for 3 hours per day on 5 consecutive days or until at least 20 banded grackles have visited at least 1 feeder.
 
-**The experiment:** Each time a PIT tagged subject lands on a feeder it is recorded as the color choice and counts as one trial. The experiment will begin with the dark gray feeder being the rewarded feeder for all individuals. 
+**The experiment:** Each time a subject lands on an automated feeder or approaches the remote controlled feeder, it is recorded as the color choice and counts as one trial. The experiment will begin with the dark gray feeder being the rewarded feeder for all individuals. 
 
 
 ## **Jays**
