--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,15 @@
+@article{karniski2015comparison,
+  title={A comparison of survey and focal follow methods for estimating individual activity budgets of cetaceans},
+  author={Karniski, Caitlin and Patterson, Eric M and Krzyszczyk, Ewa and Foroughirad, Vivienne and Stanton, Margaret A and Mann, Janet},
+  journal={Marine Mammal Science},
+  volume={31},
+  number={3},
+  pages={839--852},
+  year={2015},
+  doi={10.1111/mms.12198},
+  publisher={Wiley Online Library}
+}
+
 @incollection{peterson2011ecological,
   title={Ecological niches and geographic distributions (MPB-49)},
   author={Peterson, A Townsend and Sober{\'o}n, Jorge and Pearson, Richard G and Anderson, Robert P and Mart{\'\i}nez-Meyer, Enrique and Nakamura, Miguel and Ara{\'u}jo, Miguel B},
