added dois to refs

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -30,12 +30,13 @@
 }
 
 @article{greggor2021pre,
-  title={Pre-release training, predator interactions and evidence for persistence of anti-predator behavior in reintroducedalal{\=a}, Hawaiian crow},
+  title={Pre-release training, predator interactions and evidence for persistence of anti-predator behavior in reintroduced alal{\=a}, Hawaiian crow},
   author={Greggor, Alison L and Masuda, Bryce and Gaudioso-Levita, Jacqueline M and Nelson, Jay T and White, Thomas H and Shier, Debra M and Farabaugh, Susan M and Swaisgood, Ronald R},
   journal={Global Ecology and Conservation},
   volume={28},
   pages={e01658},
   year={2021},
+  doi={10.1016/j.gecco.2021.e01658},
   publisher={Elsevier}
 }
 
@@ -122,6 +123,7 @@ volume={123},
 number={2},
 pages={duab007},
 year={2021},
+doi={10.1093/ornithapp/duab007},
 publisher={Oxford University Press US}
 }
 
@@ -379,6 +381,7 @@ year = {2010}
   volume={9},
   pages={120},
   year={2021},
+  doi={10.3389/fevo.2021.633947},
   publisher={Frontiers}
 }
 
@@ -390,6 +393,7 @@ year = {2010}
   number={2},
   pages={334--343},
   year={2016},
+  doi={10.1111/eva.12332},
   publisher={Wiley Online Library}
 }
 
@@ -401,6 +405,7 @@ year = {2010}
   number={7},
   pages={1761--1769},
   year={2019},
+  doi={10.1111/1365-2664.13406},
   publisher={Wiley Online Library}
 }
 
@@ -411,6 +416,7 @@ year = {2010}
   volume={236},
   pages={324--331},
   year={2019},
+  doi={10.1016/j.biocon.2019.05.054},
   publisher={Elsevier}
 }
 
@@ -422,6 +428,7 @@ year = {2010}
   number={2},
   pages={139--149},
   year={2018},
+  doi={10.1111/aec.12551},
   publisher={Wiley Online Library}
 }
 
@@ -433,6 +440,7 @@ year = {2010}
   number={1},
   pages={147--156},
   year={2018},
+  doi={10.1111/1365-2664.12947},
   publisher={Wiley Online Library}
 }
 
@@ -444,6 +452,7 @@ year = {2010}
   number={4},
   pages={1011--1021},
   year={2012},
+  doi={10.1016/j.anbehav.2012.01.023},
   publisher={Elsevier}
 }
 
@@ -1243,6 +1252,7 @@ publisher={American Psychological Association}
   number={4},
   pages={393--404},
   year={2010},
+  doi={10.1080/03949370.2010.505580},
   publisher={Taylor \& Francis}
 }
 
@@ -1558,6 +1568,7 @@ publisher={American Psychological Association}
   journal={Nature Sustainability},
   pages={1--7},
   year={2020},
+  doi={10.1038/s41893-020-0521-x},
   publisher={Nature Publishing Group}
 }
 
@@ -2539,6 +2550,7 @@ publisher={Springer}
   number={3-4},
   pages={227--266},
   year={1974},
+  doi={10.1163/156853974X00534},
   publisher={Brill}
 }
 
@@ -2938,6 +2950,7 @@ publisher={Springer}
   number={2},
   pages={114--126},
   year={2015},
+  doi={10.1016/j.tree.2014.11.007},
   publisher={Elsevier}
 }
 
@@ -3002,6 +3015,7 @@ publisher={Springer}
   number={1},
   pages={65--74},
   year={2017},
+  doi={10.1007/s10071-016-1045-7},
   publisher={Springer}
 }
 
@@ -3180,6 +3194,7 @@ url = {http://florianhartig.github.io/DHARMa/},
   volume={111},
   pages={167--172},
   year={2016},
+  doi={10.1016/j.anbehav.2015.10.018},
   publisher={Elsevier}
 }
 
@@ -3256,6 +3271,7 @@ url = {http://florianhartig.github.io/DHARMa/},
   number={6},
   pages={433--439},
   year={1986},
+  doi={10.1002/1098-2337(1986)12:6<433::AID-AB2480120606>3.0.CO;2-C},
   publisher={Wiley Online Library}
 }
 
@@ -3267,6 +3283,7 @@ url = {http://florianhartig.github.io/DHARMa/},
   number={5},
   pages={1011--1018},
   year={2017},
+  doi={10.1007/s11252-017-0654-5},
   publisher={Springer}
 }
 
@@ -3361,6 +3378,7 @@ url = {http://florianhartig.github.io/DHARMa/},
   number={2},
   pages={132--141},
   year={2000},
+  doi={10.1093/beheco/11.2.132},
   publisher={Oxford University Press}
 }
 
@@ -3643,7 +3661,21 @@ url = {http://florianhartig.github.io/DHARMa/},
   volume={4},
   pages={e1975},
   year={2016},
+  doi={10.7717/peerj.1975},
   publisher={PeerJ Inc.}
+}
+
+@article{logan2023flexmanippcj,
+     author = {Logan, Corina and Lukas, Dieter and Blaisdell, Aaron and Johnson-Ulrich, Zoe and MacPherson, Maggie and Seitz, Benjamin and Sevchik, August and McCune, Kelsey},
+     title = {Behavioral flexibility is manipulable and it improves flexibility and innovativeness in a new context},
+     journal = {Peer Community Journal},
+     eid = {e70},
+     publisher = {Peer Community In},
+     volume = {3},
+     year = {2023},
+     doi = {10.24072/pcjournal.284},
+     language = {en},
+     url = {https://peercommunityjournal.org/articles/10.24072/pcjournal.284/}
 }
 
 @article{mcinerney2010,
@@ -5482,6 +5514,7 @@ Replay of behavioral sequences in the hippocampus during sharp wave ripple compl
   number={2},
   pages={417--433},
   year={2001},
+  doi={10.1029/1999GB001232},
   publisher={Wiley Online Library}
 }
 
@@ -5493,6 +5526,7 @@ Replay of behavioral sequences in the hippocampus during sharp wave ripple compl
   number={1},
   pages={1--8},
   year={2011},
+  doi={10.1016/j.ecocom.2010.03.002},
   publisher={Elsevier}
 }
 
@@ -14380,9 +14414,9 @@ fixed sequences.},
   number={3},
   pages={723--734},
   year={2014},
+  doi={10.1007/s10071-013-0704-1},
   publisher={Springer}
 }
-
 
 @article{lucon2014discrimination,
   title={Discrimination reversal learning reveals greater female behavioural flexibility in guppies},
@@ -14392,6 +14426,7 @@ fixed sequences.},
   number={6},
   pages={20140206},
   year={2014},
+  doi={10.1098/rsbl.2014.0206},
   publisher={The Royal Society}
 }
 
@@ -14403,6 +14438,7 @@ fixed sequences.},
   number={2},
   pages={85},
   year={1968},
+  doi={10.1037/h0082753},
   publisher={University of Toronto Press}
 }
 
@@ -14414,17 +14450,6 @@ fixed sequences.},
   number={1},
   pages={109--119},
   year={2020},
+  doi={10.1007/s10071-019-01321-x},
   publisher={Springer}
 }
-
-
-@article{liu2016learning,
-  title={Learning to learn: advanced behavioural flexibility in a poison frog},
-  author={Liu, Yuxiang and Day, Lainy B and Summers, Kyle and Burmeister, Sabrina S},
-  journal={Animal Behaviour},
-  volume={111},
-  pages={167--172},
-  year={2016},
-  publisher={Elsevier}
-}
-
