--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -15,6 +15,7 @@
   author={Peterson, A Townsend and Sober{\'o}n, Jorge and Pearson, Richard G and Anderson, Robert P and Mart{\'\i}nez-Meyer, Enrique and Nakamura, Miguel and Ara{\'u}jo, Miguel B},
   booktitle={Ecological Niches and Geographic Distributions (MPB-49)},
   year={2011},
+  doi={10.1515/9781400840670},
   publisher={Princeton University Press}
 }
 
@@ -26,6 +27,7 @@
   number={4},
   pages={427--433},
   year={1917},
+  doi={10.2307/4072271},
   publisher={JSTOR}
 }
 
@@ -90,6 +92,7 @@
   number={5},
   pages={1031--1039},
   year={2013},
+  doi={10.1016/j.anbehav.2012.12.032},
   publisher={Elsevier}
 }
 
@@ -101,6 +104,7 @@
   number={4},
   pages={513--531},
   year={2009},
+  doi={10.1007/s10682-008-9252-6},
   publisher={Springer}
 }
 
@@ -3238,6 +3242,7 @@ url = {http://florianhartig.github.io/DHARMa/},
   number={3},
   pages={495--502},
   year={2002},
+  doi = {10.1006/anbe.2001.1953},
   publisher={Elsevier}
 }
 
@@ -7834,22 +7839,6 @@ Although animals (particularly tool-users) are capable of solving physical tasks
 	month = sep,
 	year = {2000},
 	pages = {599--605}
-}
-
-@article{sol_behavioural_2002,
-	title = {Behavioural flexibility and invasion success in birds},
-	volume = {63},
-	issn = {0003-3472},
-	url = {http://www.sciencedirect.com/science/article/pii/S0003347201919530},
-	doi = {10.1006/anbe.2001.1953},
-	abstract = {Behavioural flexibility has long been thought to provide advantages for animals when they invade novel environments. This hypothesis has recently received empirical support in a study of avian species introduced to New Zealand, but it remains to be determined whether behavioural flexibility is a general mechanism influencing invasion success. In this study, we examined introduction success of 69 bird species in different regions of the world as a function of their degree of behavioural flexibility. Specifically, we predicted that species with relatively large brains and a high frequency of foraging innovations in their area of origin should show a higher probability of establishing themselves where they were introduced than species with small brains and low innovation frequencies. An analysis with general linear modelling (GLM) supported the prediction for relative brain size, even when controlling for phylogenetic biases and potential confounding variables. The only covariates that remained with relative brain size were plumage dimorphism, human commensalism and nest site. A pairwise comparison of closely related species also revealed that successful invaders showed a higher frequency of foraging innovations in their region of origin. This result held even when differences in research effort between species were considered. Overall, the results confirm and generalize the hypothesis that behavioural flexibility is a major determinant of invasion success in birds.},
-	number = {3},
-	urldate = {2017-05-24},
-	journal = {Animal Behaviour},
-	author = {Sol, Daniel and Timmermans, Sarah and Lefebvre, Louis},
-	month = mar,
-	year = {2002},
-	pages = {495--502}
 }
 
 @article{stephan_new_1981,
